--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    @apply font-roboto;
+    background-color: #F7FFF3;
+}
+h1,
+h2,
+h3,
+h4,
+h5,p {
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+h1 {
+  font-size: 48px;
+}
+h2 {
+  @apply text-[24px] md:text-[36px]
+}
+h3 {
+  @apply text-[16px] md:text-[24px]
+}
+h4 {
+  font-size: 20px;
+}
+p{
+  @apply text-[14px] md:text-[16px]
 }
