--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html{
+  @apply scroll-smooth
+}
 body {
     @apply font-roboto;
     background-color: #F7FFF3;
