--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,136 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-50.woff2') format('woff2');
+  font-weight: 50;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-100.woff2') format('woff2');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-150.woff2') format('woff2');
+  font-weight: 150;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-200.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-250.woff2') format('woff2');
+  font-weight: 250;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-300.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-350.woff2') format('woff2');
+  font-weight: 350;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-400.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-450.woff2') format('woff2');
+  font-weight: 450;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-500.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-550.woff2') format('woff2');
+  font-weight: 550;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-600.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-650.woff2') format('woff2');
+  font-weight: 650;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-700.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-750.woff2') format('woff2');
+  font-weight: 750;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-800.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-850.woff2') format('woff2');
+  font-weight: 850;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-900.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-950.woff2') format('woff2');
+  font-weight: 950;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'twkLausanne';
+  src: url('/fonts/TWKLausanne-1000.woff2') format('woff2');
+  font-weight: 1000;
+  font-style: normal;
+}
+
+
 html{
   @apply scroll-smooth
 }
 body {
-    @apply font-roboto;
+    /* @apply font-roboto; */
+    font-family: 'twkLausanne', sans-serif;
     background-color: #F7FFF3;
 }
 h1,
